--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,35 +1,151 @@
 @font-face {
-    font-family: 'Inter UI';
-    font-style: normal;
-    font-weight: 400;
-    src: url(./fonts/Inter-UI-Regular.woff2) format("woff2"),
-         url(./fonts/Inter-UI-Regular.woff) format("woff");
-  }
-  
+  font-family: 'Inter UI';
+  font-style: normal;
+  font-weight: 400;
+  src: url(./fonts/Inter-UI-Regular.woff2) format("woff2"),
+    url(./fonts/Inter-UI-Regular.woff) format("woff");
+}
+
 @font-face {
-    font-family: 'Inter UI';
-    font-style: normal;
-    font-weight: 700;
-    src: url(./fonts/Inter-UI-Bold.woff2) format("woff2"),
-        url(./fonts/Inter-UI-Bold.woff) format("woff");
+  font-family: 'Inter UI';
+  font-style: normal;
+  font-weight: 700;
+  src: url(./fonts/Inter-UI-Bold.woff2) format("woff2"),
+    url(./fonts/Inter-UI-Bold.woff) format("woff");
+}
+
+
+
+@charset "utf-8";
+/* CSS Document */
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+font,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
 }
 
 body {
-    margin: 0;
-    font-size: 0.75rem;
-    line-height: 1.25rem;
-    font-weight: 400;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    cursor: default;
-    overflow: hidden;
+  line-height: 1;
+  margin: 0;
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
+  overflow: hidden;
 }
 
+ol,
 ul {
-    list-style-type: none;
-    padding-inline-start: 0;
+  list-style: none;
+  list-style-type: none;
+  padding-inline-start: 0;
 }
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+:focus {
+  outline: 0;
+}
+
+ins {
+  text-decoration: none;
+}
+
+del {
+  text-decoration: line-through;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
