Updated webpack config

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -2,16 +2,16 @@
   font-family: 'Inter UI';
   font-style: normal;
   font-weight: 400;
-  src: url(./fonts/Inter-UI-Regular.woff2) format("woff2"),
-    url(./fonts/Inter-UI-Regular.woff) format("woff");
+  src: url(./assets/fonts/Inter-UI-Regular.woff2) format("woff2"),
+    url(./assets/fonts/Inter-UI-Regular.woff) format("woff");
 }
 
 @font-face {
   font-family: 'Inter UI';
   font-style: normal;
   font-weight: 700;
-  src: url(./fonts/Inter-UI-Bold.woff2) format("woff2"),
-    url(./fonts/Inter-UI-Bold.woff) format("woff");
+  src: url(./assets/fonts/Inter-UI-Bold.woff2) format("woff2"),
+    url(./assets/fonts/Inter-UI-Bold.woff) format("woff");
 }
 
 
